Feature/pn 1283 (#6)
PN-1283: implementazione user-attributes
