# docs/openapi/pn-address-book-api-v1.yaml
@@ -21,7 +21,7 @@ tags:
     description: Receiver Digital Addresses
     
 paths:
-  /address-book/v1/digital-address/{recipientId}:
+  /address-book/v1/digital-address:
     get:
       summary: Get all digital addressed
       description: Returns all digital address for the recipient
@@ -29,7 +29,7 @@ paths:
       tags:
         - all
       parameters:
-        - $ref: '#/components/parameters/recipientId'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
       responses:
         '200':
           description: successful operation
@@ -38,9 +38,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserAddresses'
         '400':
-          description: Invalid ID supplied\
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
 
   /address-book-private/v1/digital-address/legal/{recipientId}/{senderId}:
     get:
@@ -62,9 +64,11 @@ paths:
                 items:
                   $ref: '#/components/schemas/LegalDigitalAddress'
         '400':
-          description: Invalid ID supplied
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
 
   /address-book-private/v1/digital-address/courtesy/{recipientId}/{senderId}:
     get:
@@ -86,18 +90,20 @@ paths:
                 items:
                    $ref: '#/components/schemas/CourtesyDigitalAddress'
         '400':
-          description: Invalid ID supplied
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
   
-  /address-book/v1/digital-address/{recipientId}/legal:
+  /address-book/v1/digital-address/legal:
     get:
       summary: get digital addresses with legal value
       operationId: getLegalAddressByRecipient
       tags:
         - legal
       parameters:
-        - $ref: '#/components/parameters/recipientId'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
       responses:
         '200':
           description: successful operation
@@ -108,18 +114,20 @@ paths:
                 items:
                   $ref: '#/components/schemas/LegalDigitalAddress'
         '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
   
-  /address-book/v1/digital-address/{recipientId}/courtesy:
+  /address-book/v1/digital-address/courtesy:
     get:
       summary: get digital addresses without legal value
       operationId: getCourtesyAddressByRecipient
       tags:
         - courtesy
       parameters:
-        - $ref: '#/components/parameters/recipientId'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
       responses:
         '200':
           description: successful operation
@@ -130,14 +138,16 @@ paths:
                 items:
                   $ref: '#/components/schemas/CourtesyDigitalAddress'
         '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
 
 
-  /address-book/v1/digital-address/{recipientId}/legal/{senderId}/{channelType}:               
+  /address-book/v1/digital-address/legal/{senderId}/{channelType}:
     parameters:
-      - $ref: '#/components/parameters/recipientId'
+      - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
       - $ref: '#/components/parameters/senderId'
       - in: path
         name: channelType
@@ -162,11 +172,17 @@ paths:
         '204':
           description: successful operation
         '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
         '406':
-          $ref: '#/components/responses/VerificationCodeFailure'
+          description: Verification code failure
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
     delete:
       summary: Delete Digital Address
       description: Delete a single Digital Address with legal value
@@ -177,15 +193,21 @@ paths:
         '204':
           description: successful operation
         '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
         '404':
           description: Digital Address not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
 
-  /address-book/v1/digital-address/{recipientId}/courtesy/{senderId}/{channelType}:
+  /address-book/v1/digital-address/courtesy/{senderId}/{channelType}:
     parameters:
-      - $ref: '#/components/parameters/recipientId'
+      - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
       - $ref: '#/components/parameters/senderId'
       - in: path
         name: channelType
@@ -210,11 +232,17 @@ paths:
         '204':
           description: successful operation
         '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
         '406':
-          $ref: '#/components/responses/VerificationCodeFailure'
+          description: Verification code failure
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
     delete:
       summary: Delete Digital Address
       description: Delete a single Digital Address without legal value
@@ -225,11 +253,18 @@ paths:
         '204':
           description: successful operation
         '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
         '404':
           description: Digital Address not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
+
 
 components:
   parameters:
@@ -259,7 +294,7 @@ components:
         value:
           type: string
         verificationCode: 
-          type: string
+          $ref: '#/components/schemas/VerificationCode'
 
     BaseDigitalAddress:
       type: object
@@ -338,12 +373,10 @@ components:
         legal:
           type: array
           items:
-            type: object
             $ref: '#/components/schemas/LegalDigitalAddress'
         courtesy:
           type: array
           items:
-            type: object
             $ref: '#/components/schemas/CourtesyDigitalAddress'
     
     VerificationCode:
@@ -353,11 +386,3 @@ components:
       maxLength: 5
       pattern: '^\d{5}$'
       example: '12345'
-  
-  responses:
-    BadRequestError:
-      description: Parameters are invalid
-    UnauthorizedError:
-      description: Access token is missing or invalid
-    VerificationCodeFailure:
-      description: Verification code mismatch
